--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=MyProject
 server.port=9090
 
-spring.datasource.url=jdbc:mysql://localhost:3306/myapp
-spring.datasource.username=root
-spring.datasource.password=Admin@2022
+spring.datasource.url=jdbc:mysql://container-mysql:3306/myapp
+spring.datasource.username=test-user
+spring.datasource.password=pass
 spring.jpa.hibernate.ddl-auto=update
