--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,13 @@ spring.datasource.url=jdbc:mysql://container-mysql:3306/myapp
 spring.datasource.username=test-user
 spring.datasource.password=pass
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/myapp
+#spring.datasource.username=root
+#spring.datasource.password=Admin@2022
+#spring.jpa.hibernate.ddl-auto=update
+
